syntax = "proto3";

package com.young.proto.model.extend;
message OtherObject {
  int32 id = 1;
  repeated string name = 2;
}